--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <input style="text" id="Webhook"
   placeholder="webhook?"<br>
   <br>
-  <button onclick="Submit()">SUBMIT</button>
+  <button onclick="SUBMIT()">SUBMIT</button>
   <script src="main.js"></script>
   
 </body>
