--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Send Discord Webhook Message</title>
+    <title>Pin Cracker!</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 </head>
